@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- a fatal error is now generated if the plugin is run too soon, before
+  Makefile.PL or Build.PL can be generated for receiving the install-time
+  conflicts checking code. (RT#80271, Karen Etheridge)
+
 0.08    2011-07-22
 
 - Add Dist::CheckConflicts to both configures and runtime dependency lists for
